--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -61,6 +61,9 @@
 }
 
 @media screen and (min-width: 800px) {
+  .NavBar {
+    width: auto;
+  }
   .NavBar-desktop {
     display: flex;
   }
